# Inter-Email

./: .gitignore  README.md
Email Workflow v1/V3/: .env.example  .gitignore  README.md  pyproject.toml
Email Workflow v1/V3/api/: README.md
Email Workflow v1/V3/api/app/: main.py
Email Workflow v1/V3/api/tests/: test_gmail.py  test_gmail_mapper.py  test_gmail_sync_service.py  test_health.py  test_ollama_agents.py  test_openai_provider.py  test_queue_service.py  test_settings.py  test_thread_analysis_service.py  test_thread_repository.py  test_threads.py
Email Workflow v1/V3/backend/: README.md  __init__.py
Email Workflow v1/V3/backend/application/: crm_service.py  draft_service.py  gmail_connection_service.py  gmail_sync_service.py  queue_service.py  review_service.py  runtime_settings_service.py  sync_progress_store.py  thread_analysis_service.py
Email Workflow v1/V3/backend/core/: config.py  database.py  email_text.py  logging.py
Email Workflow v1/V3/backend/domain/: __init__.py  analysis.py  contact.py  gmail.py  runtime_settings.py  sync.py  thread.py
Email Workflow v1/V3/backend/jobs/: sync_runner.py
Email Workflow v1/V3/data/: README.md
Email Workflow v1/V3/docs/: architecture.md
Email Workflow v1/V3/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
Email Workflow v1/V3/frontend/src/: styles.css
Email Workflow v1/V3/infra/: README.md
Email Workflow v1/V3/inter_email_v3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Email Workflow v1/V3/shared/: README.md
(+134 files in other folders)
