[project]
name = "inter-email-v3"
version = "0.1.0"
description = "Inter-Op email workflow V3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.32",
  "google-api-python-client>=2.170.0",
  "google-auth>=2.29.0",
  "google-auth-oauthlib>=1.2.0",
  "openai>=1.35.0",
  "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["api/tests"]

[tool.setuptools]
packages = ["api", "backend"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
